@@ -71,7 +71,7 @@ See \Cmd{trio_printf}{3}.
 
 \item Decimal (d)\\
 
-\item Floating-point (a, e, E, f, F, g, G)\\
+\item Floating-point (a, A, e, E, f, F, g, G)\\
 
 \item Integer (i)\\
 
